// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OrcidPushSetting > renders when disabled 1`] = `
<DocumentFragment>
  <div
    class="mb3"
  >
    <span
      class="mr2"
    >
      Export your INSPIRE works to ORCID
    </span>
    <button
      aria-checked="false"
      class="ant-switch css-dev-only-do-not-override-oc1rc0 css-var-root"
      data-testid="orcid-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div>
    <div
      data-testid="orcid-push-setting-message"
    >
      <p>
        Your INSPIRE works are not exported to your ORCID yet. Please note that only the publications that are verified as yours on INSPIRE will be exported to ORCID.
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`OrcidPushSetting > renders when enabled 1`] = `
<DocumentFragment>
  <div
    class="mb3"
  >
    <span
      class="mr2"
    >
      Export your INSPIRE works to ORCID
    </span>
    <button
      aria-checked="true"
      class="ant-switch css-dev-only-do-not-override-oc1rc0 css-var-root ant-switch-checked"
      data-testid="orcid-switch"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div>
    <div
      data-testid="orcid-push-setting-message"
    >
      <p>
        Your INSPIRE works are not exported to your ORCID yet. Please note that only the publications that are verified as yours on INSPIRE will be exported to ORCID.
      </p>
    </div>
  </div>
</DocumentFragment>
`;
